# vergit

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  test.yml
src/: main.rs
