[package]
name = "vergit"
version = "0.2.10"
authors = ["Mathias Pius <contact@pius.io>"]
description = "Command line tool for incrementing tags of a git repository according to the SemVer spec"
keywords = ["git", "semver", "semantic-versioning", "tool", "command-line-utility"]
repository = "https://github.com/MathiasPius/vergit"
license = "MIT"
edition = "2018"

[dependencies]
git2 = "0.16.1"
semver = "1.0.3"
anyhow = { version = "1.0" }
clap = { version = "4.1.4", features = ["derive"] }
indoc = "2.0.0"
